# security-compliance-cli

./: .gitignore  CHANGELOG.md  CONTEXT.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY_FIXES.md  build-aarch64.sh  runtime_results.json  test_device_key
.github/workflows/: ci.yml  release.yml
docs/: COMPLIANCE_REPORTING.md  DEVELOPMENT.md  ENABLE_AUDIT_LOGGING.md  ENABLE_CAAM_CRYPTO.md  SERIAL_SETUP.md  SSH_KEY_INSTALLATION.md  SSH_SETUP.md
scripts/: deploy-target.sh  install-test-key.sh  pre-commit-check.sh  setup-dev.sh
scripts/git-hooks/: pre-commit
src/: cli.rs  communication.rs  compliance.rs  config.rs  error.rs  lib.rs  machine.rs  main.rs  output.rs  runner.rs  serial_channel.rs  serial_channel_windows.rs  ssh.rs  ssh_channel.rs  ssh_key.rs  target.rs
src/tests/: boot.rs  certificate.rs  compliance.rs  container.rs  hardware.rs  mod.rs  network.rs  production.rs  runtime.rs
test-data/: test_ed25519  test_ed25519.pub
