[package]
name = "security-compliance-cli"
version = "0.3.0"
edition = "2021"
authors = ["Alex J Lennon <alex@dynamicdevices.co.uk>"]
description = "Security compliance testing CLI for embedded Linux systems"
homepage = "https://github.com/DynamicDevices/security-compliance-cli"
repository = "https://github.com/DynamicDevices/security-compliance-cli"
license = "GPL-3.0-or-later"
keywords = ["security", "compliance", "embedded", "testing", "imx93"]
categories = ["command-line-utilities", "development-tools::testing"]

[dependencies]
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
colored = "2.0"
indicatif = "0.17"
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
ssh2 = "0.9"
tempfile = "3.8"
async-trait = "0.1"
toml = "0.8"
printpdf = "0.7"
tokio-serial = "5.4"
bytes = "1.5"
ed25519-dalek = { version = "2.0", features = ["rand_core"] }
rand = "0.8"
base64 = "0.22"
ssh-key = { version = "0.6", features = ["ed25519", "encryption"] }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
tempfile = "3.8"

[[bin]]
name = "security-compliance-cli"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
